--- a/inline-dubugger/package.json
+++ b/inline-dubugger/package.json
@@ -9,18 +9,40 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:python"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
         "command": "inline-dubugger.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "inline-debugger.printLog",
+        "title": "Python Print"
+      }
+    ],
+    "customEditors": [
+      {
+        "viewType": "inline-dubugger.cmbEditor",
+        "displayName": "Assignment Editor",
+        "selector": [
+          {
+            "filenamePattern": "*.cmb"
+          }
+        ],
+        "priority": "default"
       }
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "install:all": "npm install && cd webview-ui && npm install",
+    "dev:webview": "cd webview-ui && npm run dev",
+    "build:webview:dev": "cd webview-ui && npm run build:dev",
+    "build:webview:prod": "cd webview-ui && npm run build:prod",
+    "vscode:prepublish": "npm run compile && npm run build:webview:prod",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
@@ -28,14 +50,20 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.99.0",
+    "@types/lodash": "^4.17.16",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/tmp": "^0.2.6",
+    "@types/vscode": "^1.99.0",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
-    "eslint": "^9.23.0",
-    "typescript": "^5.8.2",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.23.0",
+    "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "tmp": "^0.2.3"
   }
 }
